styles.css
#content,
#header,
#side-btns,
#container {
	display: grid;
}

#container {
	grid-template-columns: 1fr 4fr;
	grid-template-rows: 1fr 4fr;
}

#header {
	background-color: white;
	grid-column: 2 / 3;
	grid-row: 1 / 2;
	grid-template-columns: 3fr 2fr;
	grid-template-rows: 2fr 2fr;
}

#sidebar {
	background-color: blue;
	grid-column: 1 / 2;
	grid-row: 1 / 3;
}

#content {
	background-color: gray;
	grid-column: 2 / 3;
	grid-row: 2 / 3;
}

#search-bar {
	grid-column: 1 / 2;
	grid-row: 1 / 2;
}

#profile {
	grid-column: 2 / 3;
	grid-row: 1 / 2;
}

#banner {
	grid-column: 1 / 2;
	grid-row: 2 / 3;
}

#head-btns {
	grid-column: 2 / 3;
	grid-row: 2 / 3;
}

#side-btns {
	grid-template-columns: 1fr;
	grid-template-rows: 1fr 1fr;
	gap: 64px;
}

#app-btns {
	grid-row: 1 / 2;
}

#settings-btns {
	grid-row: 2 / 3;
}

.side-btn {
	display: block;
}

